--- a/Your-stuff.html
+++ b/Your-stuff.html
@@ -19,7 +19,6 @@
         <div class="page-header">
             <h1>WE LOVE YOU A LOT!!!!<br>
                 <small>YOU ARE AMAZINGGGG</small></h1>
-                <button class="button"><a href="page-5.html"><span>FINALE</span></a></button>
         </div>
         <div class="row active-with-click">
             <div class="col-md-4 col-sm-6 col-xs-12">
@@ -35,7 +34,7 @@
                         <div class="img-container">
                             <img class="img-responsive" src="Media/pg-4/Ayaz.jpg">
                         </div>
-                        <div class="mc-description">
+                        <div class="mc-description gaygay">
                             He has appeared in more than 100 films and television shows, including The Deer Hunter, Annie Hall, The Prophecy trilogy, The Dogs of War is a great source of actions.
                         </div>
                     </div>
@@ -58,7 +57,7 @@
                         <div class="img-container">
                             <img class="img-responsive" src="Media\pg-4\Palak Sahu.jpeg">
                         </div>
-                        <div class="mc-description">
+                        <div class="mc-description gaygay">
                             Oye sun happy birthday!!!!....it all started from type B from being in the same section to the same group to doing group projects together to hostel floor mates to walking together and then turning into friends you are 
                             one of your kind Khushi...keep reading, keep shinning, keep achieving new greater heights of success and you are amazing🤩
                         </div>
@@ -82,7 +81,7 @@
                         <div class="img-container">
                             <img class="img-responsive" src="Media/pg-4/Manav Chillar.jpeg">
                         </div>
-                        <div class="mc-description">
+                        <div class="mc-description gaygay">
                             hey 幸福 !
                             Happy 19th Birthday 🖤
                             you are soo book smart but sometimes life dumb (hehe ) 
@@ -106,7 +105,7 @@
                         <span>Gunjeev</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
-                            Nickname
+                            Panacea
                         </strong>
                     </h2>
                     <div class="mc-content">
@@ -139,7 +138,7 @@
                         <div class="img-container">
                             <img class="img-responsive" src="Media/pg-4/Karam Arora.jpeg">
                         </div>
-                        <div class="mc-description">
+                        <div class="mc-description gaygay">
                             Hey there khushi, hope you are in good spirits in this pandemic A very happy birthday to you if the college was not closed down there would have been no need for a wish like this just a direct surprise, lastly I hope you enjoy your day and looking forward to meet you in college soon✌️.
                         </div>
                     </div>
@@ -178,7 +177,7 @@
                         <span>Gaytri</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
-                            Pulp Fiction
+                            Powerpuff GIrl
                         </strong>
                     </h2>
                     <div class="mc-content">
@@ -186,7 +185,7 @@
                             <img class="img-responsive" src="Media/pg-4/Gaytri Sran.jpeg">
                         </div>
                         <div class="mc-description gaygay">
-                            Oh hey! I still remember that day when you turned on your camera in eco class on your first day and we planned to add you in our IoT group and kick out the other group member coz OG Khushi’s doppelgänger😂. Since that day we had numerous video calls, birthday calls, morning walks and unforgettable moments where one us was at dumbness 100/10 level (only you and Vaibhav thou heh), from having lunch in corridor to attending meeting in my hostel room it was a great. Also also also that song you you dedicated on my birthday, that was quite spontaneous but demn I loved that song🥺. Love you. HAPPY BIRTHDAYYY and I hope you’ll enjoy your projects with all K K South Indians😂
+                            Oh hey! I still remember that day when you turned on your camera in eco class on your first day and we planned to add you in our IoT group and kick out the other group member coz OG Khushi’s doppelgänger😂. Since that day we've had numerous video calls, birthday calls, morning walks and unforgettable moments where one us was at dumbness 100/10 level (only you and Vaibhav tho heh), from having lunch in corridor to attending meeting in my hostel room it was a great time. Also also also that song you you dedicated on my birthday, that was quite spontaneous but demn I loved that song🥺. Love you. HAPPY BIRTHDAYYY and I hope you’ll enjoy your projects with all K K South Indians😂
                         </div>
                     </div>
                     <a class="mc-btn-action">
@@ -208,8 +207,8 @@
                         <div class="img-container">
                             <img class="img-responsive" src="Media/pg-4/Webz.jpeg">
                         </div>
-                        <div class="mc-description">
-                            Throughout his career, Nicholson has portrayed unique and challenging roles, many of which include dark portrayals of excitable, neurotic and psychopathic characters ...
+                        <div class="mc-description gaygay">
+                            Hey Khushi! Happy birthday from your first friend at NU! (I hope 😬)! I know we didn't start off exactly how other friends start. Definitely not looking like your best friend's ex girlfriend! But first semester was fun just because of you, otherwise 30th February ko kya hota hai kon hi bhul pata. That was such a blunder Yaar. Sabko yaad tha ki kya hota hai 30th ko 😔. Anyways 😂. Stay happy Stay healthy! Hope you have an amazing year ahead! 🥳
                         </div>
                     </div>
                     <a class="mc-btn-action">
@@ -231,7 +230,7 @@
                         <div class="img-container">
                             <img class="img-responsive" src="Media/pg-4/Madhvi Kankran.jpeg">
                         </div>
-                        <div class="mc-description">
+                        <div class="mc-description gaygay">
                             You mean a lot to pp so obviously you mean a lot to me as well. Happy Birthday Khushi, wishing you abundance of happiness.
                         </div>
                     </div>
@@ -279,8 +278,8 @@ looking forward to your next rant, i always derive ironic pleasure from u talkin
                         <div class="img-container">
                             <img class="img-responsive" src="Media/pg-4/Parijat Kasbekar.jpeg">
                         </div>
-                        <div class="mc-description">
-                            Happiest Birthday Khushi! Hoping to get to know you better by having more awkwardly fun conversations with you. Eat loads of pizzas and send some for us!
+                        <div class="mc-description gaygay">
+                            I never thought I'll get myself to write this for you cuz ofc we haven't spoken much for me to know you well. But from what I've heard about you from Pandey and other guys since the beginning has always made me want to get to know you better as a person. And maybe writing this for your birthday is one step closer to that. I know I might be the strangest person you have ever met cuz I never made the first move to strike a conversation with you even though I had so many opportunities, but please know that you won't be disappointed once we FINALLY start getting to know each other, altho I hope my coy inner self allows me to do that soon. I have noticed many things which are common between us so get ready to have many awkwardly fun conversations with me :) Happiest Birthday Khushi! Eat loads of pizzas and send some for us.
                         </div>
                     </div>
                     <a class="mc-btn-action">
@@ -295,15 +294,19 @@ looking forward to your next rant, i always derive ironic pleasure from u talkin
                         <span>Aachman</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
-                            25th Hour
+                            
                         </strong>
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-philip-seymour-hoffman.jpg">
+                            <img class="img-responsive" src="Media/pg-4/Aachman.jpeg">
                         </div>
-                        <div class="mc-description">
-                            Best known for his distinctive supporting and character roles – typically lowlifes, bullies, and misfits – Hoffman was a regular presence in films from the early 1990s until his death at age 46.
+                        <div class="mc-description gaygay">
+                            Happy birthday Khushi.
+Yet another birthday we're stuck here. But despite that, I love seeing the progress you've been making. TWENTY THOUSAND INTERNSHIP 😭, MEREKO BHI DEDE PAISE. But yes even apart from that lmao.
+Despite all the shitshows, hope you're good this birthday.
+And hope everything gets back to normal soon, whatever that is.
+Baaki all the best, here's to hopefully a great year ahead, happy birthday.
                         </div>
                     </div>
                     <a class="mc-btn-action">
@@ -315,7 +318,7 @@ looking forward to your next rant, i always derive ironic pleasure from u talkin
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Amber">
                     <h2>
-                        <span>&nbsp;</span>
+                        <span>No Name</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
                             Color Pencil
@@ -325,7 +328,7 @@ looking forward to your next rant, i always derive ironic pleasure from u talkin
                         <div class="img-container">
                             <img class="img-responsive" src="Media/pg-4/Ishaan.jpg">
                         </div>
-                        <div class="mc-description">
+                        <div class="mc-description gaygay">
                             that one time you posted "the transience to a blur gets to me" is, no exaggeration, the most memorable concept stuck in my head and will always be. i wish i was as artistic as you are
                         </div>
                     </div>
@@ -348,7 +351,7 @@ looking forward to your next rant, i always derive ironic pleasure from u talkin
                         <div class="img-container">
                             <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-marlon-brando.jpg">
                         </div>
-                        <div class="mc-description">
+                        <div class="mc-description gaygay">
                             He is hailed for bringing a gripping realism to film acting, and is frequently cited as the greatest and most influential actor of all time.[2] A cultural icon, Brando is most famous for his Academy ...
                         </div>
                     </div>
@@ -371,7 +374,7 @@ looking forward to your next rant, i always derive ironic pleasure from u talkin
                         <div class="img-container">
                             <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-kevin-spacey.jpg">
                         </div>
-                        <div class="mc-description">
+                        <div class="mc-description gaygay">
                             He began his career as a stage actor during the 1980s, before being cast in supporting roles in film and television. He gained critical acclaim in the early 1990s, culminating in his first Academy Award ...
                         </div>
                     </div>
@@ -394,7 +397,7 @@ looking forward to your next rant, i always derive ironic pleasure from u talkin
                         <div class="img-container">
                             <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-robert-de-niro.jpg">
                         </div>
-                        <div class="mc-description">
+                        <div class="mc-description gaygay">
                             His first major film roles were in the sports drama Bang the Drum Slowly (1973) and Martin Scorsese's crime film Mean Streets (1973). In 1974, after being turned down for the role of Sonny Corleone in the crime ...
                         </div>
                     </div>
@@ -417,7 +420,7 @@ looking forward to your next rant, i always derive ironic pleasure from u talkin
                         <div class="img-container">
                             <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-steve-mcqueen.jpg">
                         </div>
-                        <div class="mc-description">
+                        <div class="mc-description gaygay">
                             Called "The King of Cool", his "anti-hero" persona, developed at the height of the Vietnam War-era counterculture, made him a top box-office draw of the 1960s and 1970s. McQueen received an Academy Award nomination for his ...
                         </div>
                     </div>
@@ -440,7 +443,7 @@ looking forward to your next rant, i always derive ironic pleasure from u talkin
                         <div class="img-container">
                             <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-rugter-hauer.jpg">
                         </div>
-                        <div class="mc-description">
+                        <div class="mc-description gaygay">
                             Blonde, blue-eyed, tall and handsome Dutch actor Rutger Hauer has an international reputation for playing everything from romantic leads to action heroes to sinister villains. Hauer was born in Breukelen, a town in the province ...
                         </div>
                     </div>
@@ -463,7 +466,7 @@ looking forward to your next rant, i always derive ironic pleasure from u talkin
                         <div class="img-container">
                             <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-morgan-freeman.jpg">
                         </div>
-                        <div class="mc-description">
+                        <div class="mc-description gaygay">
                             Freeman has received Academy Award nominations for his performances in Street Smart, Driving Miss Daisy, The Shawshank Redemption and Invictus ...
                         </div>
                     </div>
@@ -476,6 +479,7 @@ looking forward to your next rant, i always derive ironic pleasure from u talkin
                 </article>
             </div> -->
         </div>
+        <a href="page-5.html"><button id="button" class="button"><span>FINALE</span></button></a>
     </section>
     
 </body>
