--- a/ayaz-photos.html
+++ b/ayaz-photos.html
@@ -16,16 +16,16 @@
 <div class="slideshow">
     <div class="slider slider-1">
       <div class="item">
-        <img src="https://images.unsplash.com/photo-1465935343323-d742334bcbda?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925">
+        <img src="Media/pg-4/Slideshow_1.jpg">
       </div>
       <div class="item">
-        <img src="https://images.unsplash.com/photo-1443890923422-7819ed4101c0?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925">
+        <img src="Media/pg-4/Slidwshow_2.jpg">
       </div>
       <div class="item">
-        <img src="https://images.unsplash.com/photo-1474861644511-0f2775ae97cc?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925">
+        <img src="Media/pg-4/Slideshow_3.jpg">
       </div>
       <div class="item">
-        <img src="https://images.unsplash.com/photo-1474861644511-0f2775ae97cc?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925">
+        <img src="Media/pg-4/Slideshow_4.png">
       </div>
     </div>
   </div>
